--- a/src/App.css
+++ b/src/App.css
@@ -75,10 +75,31 @@ these styles and create your own styles and layout for the application.
     font-size: 2.5rem;
     margin-top: 1rem;
   }
+
+  .app-heading-circle {
+    background: var(--col-2);
+    width: 7rem;
+    height: 7rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 4rem;
+    box-shadow: 2px 4px 10px hsla(0, 0%, 0%, 0.3),
+      2px 4px 20px hsla(0, 0%, 0%, 0.2);
+  }
+  
+    .app-logo {
+      width: 5rem;
+      filter: drop-shadow(1px 1px 11px var(--col-0));
+    }
+  
+
 }
 
 /** Targets all h2s in the app. Intended for the "Add Joke", "Untold", and "Told" headers*/
-h2 {
+.h2 {
   border: none;
   border-bottom: 3px solid var(--col-2);
   padding: 0.25rem 0;
@@ -137,12 +158,13 @@ h2 {
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
+}
 
   /** Class for a single list container. It should be added to a div that wraps a every element for a single list.*/
   .joke-list-container {
     flex-basis: 45%;
     width: 100%;
-
+  }
     /** Class for the count of told jokes. Add it to a <span> element within the <h2> for Told */
     .told-count {
       color: var(--col-5);
@@ -158,8 +180,8 @@ h2 {
     .untold-count {
       float: right;
     }
-  }
-}
+  
+
 
 /** Class for an individual <li>*/
 .joke-list-item {
